Add 'duplicate' button

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -56,6 +56,12 @@
   "optionApplyOnValueResponse": {
     "message": "Response"
   },
+  "optionDuplicate": {
+    "message": "Duplicate"
+  },
+  "optionRemove": {
+    "message": "Remove"
+  },
   "optionAddRule": {
     "message": "Add Rule"
   },
